# spotify_artists

./: .gitignore  COPYRIGHT  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
src/: config.py  crud.py  db.py  main.py  mocks.py  models.py  schemas.py  spotify.py  test_crud.py  test_main.py  worker.py
