
[project]
name = "spotify_artists"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergej Morokin", email = "sergej.morokin@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.98.0",
    "sqlalchemy[asyncio]>=2.0.17",
    "psycopg2-binary>=2.9.6",
    "asyncpg>=0.27.0",
    "celery[redis]>=5.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.275",
]
