
[project]
name = "spotify_artists"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergej Morokin", email = "sergej.morokin@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.98.0",
    "sqlalchemy[aiosqlite,asyncio,asyncpg,psycopg2-binary]>=2.0.18",
    "celery[redis]>=5.3.1",
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "pytest-asyncio>=0.21.0",
    "asyncpg>=0.28.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.275",
]
